# cryptoexercise

./: .gitignore  .gitmodules  CMakeLists.cryptopp.txt  CMakeLists.pistache.txt  CMakeLists.rapidjson.txt  CMakeLists.txt  readme.md
src/: ScramblerEndpoint.cpp  Server.cpp
src/business/: KeyBusinessLogic.cpp  MessageBusinessLogic.cpp  SliceBusiness.cpp
src/handlers/: HealthCheckHandler.cpp  ScramblerHandler.cpp
src/helpers/: RamdomHelpers.cpp  RandomHelpers.cpp  RsaHelpers.cpp
src/include/: BaseInclude.hpp  DescramblerSliceRequest.hpp  DescramblerSliceResponse.hpp  KeyBusinessLogic.hpp  RandomHelpers.hpp  ScramblerEndpoint.hpp  ScramblerHandler.hpp  ScramblerSliceRequest.hpp  ScramblerSliceResponse.hpp  SliceBusiness.hpp  SlicedData.hpp
src/include/business/: KeyBusinessLogic.hpp  MessageBusinessLogic.hpp
src/include/handlers/: HealthCheckHandler.hpp
src/include/helpers/: RandomHelpers.hpp  RsaHelpers.hpp
src/jsonSchemas/: scrambler.recover.key.request.json  scrambler.slice.request.json
src/schemas/: DescramblerSliceRequest.cpp  DescramblerSliceResponse.cpp  ScramblerSliceRequest.cpp  ScramblerSliceResponse.cpp  SlicedData.cpp
